--- a/Blog.Web/Sass/post.scss
+++ b/Blog.Web/Sass/post.scss
@@ -92,6 +92,7 @@ article {
         .avatar {
             overflow: hidden;
             border-radius: 50%;
+            flex: 0 0 64px;
             width: 64px;
             height: 64px;
 
